# room-of-requirement

./: .gitignore  API.md  CHANGELOG.md  Cargo.toml  E001-prompts202412.txt  EXAMPLES.md  Journal01.md  Journal02-DatabaseMove.md  QUICKSTART.md  README.md  SETUP.md  TROUBLESHOOTING.md  audit.toml  docker-compose.yml
.github/workflows/: test.yml
.kiro/specs/S01-query-github-into-pg/: design.md  requirements.md  tasks.md
.kiro/specs/github-repository-database/: backlog.md  design.md  requirements.md
benches/: performance_benchmarks.rs
docs/: database_operations.md  github_client.md  testing_suite_summary.md
examples/: database_demo.rs  github_client_demo.rs  workflow_demo.rs
scripts/: db-manage.sh  setup-local-db.sh  setup-native-postgres.sh
src/: cli.rs  database.rs  errors.rs  github.rs  lib.rs  main.rs  models.rs
src/github/: tests.rs
src/models/: tests.rs
tests/: database_integration_tests.rs  integration_workflow_tests.rs  main_workflow_integration_test.rs  test_runner.rs
tests/e2e/: cli_integration_tests.rs  mod.rs
tests/unit/: cli_tests.rs  database_tests.rs  github_client_tests.rs  mod.rs
