[package]
name = "github-pg-query"
version = "0.1.0"
edition = "2021"
description = "Simple tool that executes GitHub API search queries and stores results in PostgreSQL tables"
authors = ["Developer"]

[dependencies]
tokio = { version = "1.0", features = ["full"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4.0", features = ["derive"] }
thiserror = "1.0"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
serde_json = "1.0"
fastrand = "2.0"
dotenv = "0.15"