[package]
name = "github-pg-query"
version = "0.1.0"
edition = "2021"
description = "Simple tool that executes GitHub API search queries and stores results in PostgreSQL tables"
authors = ["Developer"]

[dependencies]
tokio = { version = "1.0", features = ["full"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4.0", features = ["derive"] }
thiserror = "1.0"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
serde_json = "1.0"
fastrand = "2.0"
dotenv = "0.15"

[dev-dependencies]
# Testing frameworks
tokio-test = "0.4"
proptest = "1.0"
criterion = { version = "0.5", features = ["html_reports"] }
mockall = "0.11"
wiremock = "0.5"
testcontainers = "0.15"
tempfile = "3.0"

# Additional testing utilities
serial_test = "3.0"
rstest = "0.18"
pretty_assertions = "1.0"

[[bench]]
name = "performance_benchmarks"
harness = false