[package]
name = "github-pg-query"
version = "0.1.0"
edition = "2021"
description = "Simple tool that executes GitHub API search queries and stores results in PostgreSQL tables"
authors = ["Developer"]

[dependencies]
tokio = { version = "1.0", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "macros"], default-features = false }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4.0", features = ["derive"] }
thiserror = "1.0"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
serde_json = "1.0"
fastrand = "2.0"
dotenvy = "0.15"  # Maintained fork of dotenv

[dev-dependencies]
# Testing frameworks
tokio-test = "0.4"
proptest = "1.0"
criterion = { version = "0.5", features = ["html_reports"] }
mockall = "0.12"
wiremock = "0.6"
testcontainers = "0.23"
tempfile = "3.0"

# Additional testing utilities
serial_test = "3.0"
rstest = "0.23"
pretty_assertions = "1.0"

[[bench]]
name = "performance_benchmarks"
harness = false